--- a/css/style.css
+++ b/css/style.css
@@ -2,16 +2,6 @@ body {
     margin: 0;
 }
 
-.container {
-    display: flex;
-    flex-direction: row;
-}
-
-svg {
-    width: 100vw;
-    height: 100vh;
-}
-
 #info {
     position: fixed;
     right: 0;
@@ -34,4 +24,18 @@ svg {
 
 #info > .datetime {
     margin: 0.5em 0;
+}
+
+.SvgOverlay {
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+}
+
+.SvgOverlay svg {
+    position: absolute;
+    top: -1000px;
+    left: -1000px;
+    width: 4000px;
+    height: 4000px;
 }
