--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,22 @@
+@import url("https://fonts.googleapis.com/earlyaccess/notosanstc.css");
+
 body {
     margin: 0;
+    font-family: "Noto Sans TC", sans-serif;
+}
+
+#controls {
+    display: flex;
+    align-items: center;
+    /* box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23); */
+}
+
+.btn {
+    padding: 0.5em;
+    margin: 0;
+    width: 1em;
+    text-align: center;
+    cursor: pointer;
 }
 
 #info {
