--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,10 @@ body {
     cursor: pointer;
 }
 
+.btn:hover {
+    background: #666a !important;
+}
+
 #info {
     position: fixed;
     right: 0;
